tests/paczka1/small_fuzzy/50955292.err
Error in line 4: 6BZqo S171 39,7
Error in line 7: hBsob1KFB S171 15,7
